added call to action section

--- a/sass/_components.scss
+++ b/sass/_components.scss
@@ -269,8 +269,17 @@
   cursor: pointer;
   transition: all 0.2s;
 
+  & span {
+    margin-left: 3px;
+    transition: margin-left 0.2s;
+  }
+
   &:hover {
     color: var(--color-grey-dark-1);
+
+    span {
+      margin-left: 8px;
+    }
   }
 
   &:focus {
@@ -429,3 +438,19 @@
     z-index: 1;
   }
 }
+
+/////// CALL TO ACTION ///////
+
+.cta {
+  padding: 3.5rem 0;
+  text-align: center;
+
+  &__book-now {
+    font-size: 2rem;
+    font-weight: 300;
+    text-transform: uppercase;
+    margin-bottom: 2.5rem;
+  }
+}
+
+/////// BUTTON SWITCH ///////
